Improved layout of shopping list

--- a/public/partial/contact.html
+++ b/public/partial/contact.html
@@ -18,9 +18,12 @@
             <div class="col-lg-4 col-lg-offset-4 text-center">
                 <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                 <p>
-                    <a href="mailto:caroline.mc-mahon@ucdconnect.ie">caroline.mc-mahon@ucdconnect.ie</a>
+                    philip.corr@ucdconnect.ie<br>
+                    gavin.heaney@ucdconnect.ie<br>
+                    caroline.mc-mahon@ucdconnect.ie<br>
+                    <!-- <a href="mailto:caroline.mc-mahon@ucdconnect.ie">caroline.mc-mahon@ucdconnect.ie</a>
                     <a href="mailto:philip.corr@ucdconnect.ie"> philip.corr@ucdconnect.ie</a>
-                    <a href="mailto:gavin.heaney@ucdconnect.ie"> gavin.heaney@ucdconnect.ie</a>
+                    <a href="mailto:gavin.heaney@ucdconnect.ie"> gavin.heaney@ucdconnect.ie</a> -->
                 </p>
             </div>
         </div>
