--- a/public/partial/navbar.html
+++ b/public/partial/navbar.html
@@ -1,25 +1,18 @@
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
+        <div class="container-fluid" class="navbar-custom">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Return to Top of Page</a>
+                <a class="navbar-brand page-scroll" href="/index">Roasted Pepper</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right">         
                     <li>
-                        <a class="page-scroll" href="#about">Dietary needs  </a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Recipe Images</a>
+                        <a class="page-scroll" href="#portfolio">Search</a>
                     </li> 
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
