--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -27,6 +27,7 @@ under the title of recipeApp -->
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Plugin CSS -->
@@ -35,7 +36,7 @@ under the title of recipeApp -->
     <!-- Theme CSS -->
     <link href="vendor/main-theme/creative.css" rel="stylesheet">
 
-
+    <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
 
     <script src="js/services/recipeService.js"></script>
     <script src="js/services/listService.js"></script>
@@ -59,8 +60,8 @@ under the title of recipeApp -->
             <div class="panel panel-default panel-text-color">
               <div class="panel-body text-primary"></div>
                 <div class="header-content-inner text-primary">
-                    <h1 id="homeHeading">Recipe Recommending Application</h1>
-                    <hr>
+                    <h1 id="homeHeading" class="title-custom">Roasted Pepper</h1>
+                    <hr class="hr-custom">
                     <a href="/index" class="btn btn-primary btn-xl page-scroll">Start you recipe search!</a>
                     <a href="/index/list" class="btn btn-primary btn-xl page-scroll">Build a Shopping List!</a>
                 </div>
