fixed some links so that they direct to right places

--- a/public/partial/home.html
+++ b/public/partial/home.html
@@ -1,205 +1,16 @@
-    <section class="bg-primary filter-wrapper" id="about">
-        <div class="container">
-            <div class="row">
-                <div >
-                    
-                    <h3 class="section-heading text-center red-text"> Cuisine Type </h3>
-                    <!-- ng-click updates the scope variables which are available to the controller-->                
-                    <div class="centre-filters">
-                    <a ng-click="filters.cuisine=''" class="btn btn-cuisine">None</a>
-                    <a ng-click="filters.cuisine='american'" class="btn btn-cuisine">American</a>
-                    <a ng-click="filters.cuisine='italian'" class="btn btn-cuisine">Italian</a>
-                    <a ng-click="filters.cuisine='indian'" class="btn btn-cuisine">Indian</a>
-                    <a ng-click="filters.cuisine='irish'" class="btn btn-cuisine">Irish</a>
-                    <a ng-click="filters.cuisine='chinese'" class="btn btn-cuisine">Chinese</a>
-                    <a ng-click="filters.cuisine='mexican'" class="btn btn-cuisine">Mexican</a>
-
-                    <!-- <a href="/index/american" class="btn btn-cuisine">American</a>
-                    <a href="/index/italian" class="btn btn-cuisine">Italian</a>
-                    <a href="/index/indian" class="btn btn-cuisine">Indian</a>
-                    <a href="/index/irish" class="btn btn-cuisine">Irish</a>
-                    <a href="/index/chinese" class="btn btn-cuisine">Chinese</a>
-                    <a href="/index/mexican" class="btn btn-cuisine">Mexican</a> -->
-                    </div>
-                </div>
-
-                <div >
-                    <p></p>
-                    <h3 class="section-heading text-center red-text"> Dietary Needs </h3>
-                    <div class="container centre-filters">
-                    <a href="#portfolio" ng-click="filters.diet=''" class="btn btn-cuisine">None</a>
-                    <a ng-click="filters.diet='vegetarian'" class="btn btn-cuisine">Vegetarian</a>
-                    <a ng-click="filters.diet='vegan'"      class="btn btn-cuisine">Vegan</a>
-                    <a ng-click="filters.diet='pescetarian'" class="btn btn-cuisine">Pescetarian</a>
-                    <a ng-click="filters.diet='paleo'" class="btn btn-cuisine">Paleo</a>
-                    <a ng-click="filters.diet='primal'" class="btn btn-cuisine">Primal</a>
-                    <a ng-click="filters.diet='ovo vegetarian'" class="btn btn-cuisine">Ovo vegetarian</a>
-                    <a ng-click="filters.diet='lacto vegetarian'" class="btn btn-cuisine">Lacto vegetarian</a>
-                    <p></p>
-                    </div>
-                </div>
-
-                <fieldset>
-                    <input type="text" class="form-control" name="addIngredient" placeholder="Add Ingredients to search by..." ng-model="filters.includeIngredients">
-                </fieldset>
-
-                <div class="centre-filters">
-                    <!-- <h3 class="section-heading text-center red-text"> Selected Preferences: </h3>                   -->
-<!--                <p>{{filters.cuisine | capitalize}}</p> 
-                    <p>{{filters.diet | capitalize}} </p>
-                    <p>{{filters.includeIngredients | capitalize}} </p> -->
-
-                    <a ng-click="getData()" class="btn btn-cuisine centre-custom">Get recipes</a>
-                </div>
-
-                <!-- <div class="form-group">
-                  <label for="sel1">Dietary Needs (hold ctrl or shift (or drag with the mouse) to select more than one):</label>
-                 <select multiple class="form-control" id="sel2">
-                    <option ng-click="record(event.id)">Vegetarian</option>
-                    <option ng-click="deleteEvent(event.id)">Vegan</option>
-                    <option ng-click="deleteEvent(event.id)">Coeliac</option>
-                    <option ng-click="deleteEvent(event.id)">Lactose Intolerant</option>
-                    <option ng-click="deleteEvent(event.id)">Nut Allergy</option>
-                  </select>
-                </div> -->
-
-
-                <!-- <div class="form-group">
-                  <label for="sel1">Ingredients:</label>
-                 <select multiple class="form-control" id="sel2">
-                    <option>Chicken</option>
-                    <option>Beef</option>
-                    <option>Mince</option>
-                    <option>Carrots</option>
-                    <option>Potato</option>
-                    <option>Bell Peppers</option>
-                    <option>Rice</option>
-                    <option>Cheese</option>
-                    <option>Tomatoes</option>
-                    <option>Lettuce</option>
-                  </select>
-                </div> -->
-                <!--
-                <div class="dropdown">
-                  <button class="btn btn-default dropdown-menu-toggle" type="button" id="menu1"  data-toggle="dropdown">Food Type 
-                  <span class="caret" width="100%"></span></button>
-                  <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                    <li role="presentation"><a role="menuitem" href="/american">American</a></li>
-                    <li role="presentation"><a role="menuitem" href="/italian">Italian</a></li>
-                    <li role="presentation"><a role="menuitem" href="/mexican">Mexian</a></li>
-                    <li role="presentation"><a role="menuitem" href="/chinese">Chinese</a></li>-->
-                    <!--<li role="presentation" class="divider"></li>
-                    <li role="presentation"><a role="menuitem" href="#">About Us</a></li> -->
-                  </ul>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-<!-- <section class="bg-primary" id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center" >
-                    <h2 class="section-heading"> {{cuisine_name}} </h2>
-                    <hr class="light">
-                    <p class="text-faded">
-                    <p>These are the titles of the {{cuisine_name}} recipes returned from spoonacular database:</p>
-                    <div class="list-group">
-                        <div class="col-lg-4 col-sm-6 center-block" ng-repeat="recipe in recipes">
-                            <a href="/italian" class="list-group">
-                                <button type="button" class="list-group-item" data-toggle="modal" data-target="#myModal<%=i%>" >{{recipe.title}}
-                                    <span class="pull-right">
-                                        <a type="button" class="btn btn-xs btn-default" href=/{{recipe.title}}>
-                                            <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-                                        </a>
-                                    </span>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                    </p>
-                    <a href="#portfolio" class="page-scroll btn btn-default btn-xl sr-button">See Top 6 recipes images!</a>
-                </div>
-            </div>
-        </div>
-</section> -->
-
-<!-- Modal -->
-
-<!--             <body>
-                <div class="modal fade" id="myModal<%=i%>" role="dialog" ng-repeat="recipe in recipes">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">{{recipe.title}}</h4>
-                            </div>
-                            <div class="modal-body">
-                                <p>Some basic info about recipe here:</p>
-                                <p>Calories: <%=recipeCalories[i]%> </p>
-                                <p>Fat: <%=recipeFat[i]%> </p>
-                                <p>Protein: <%=recipeProtein[i]%> </p>
-                                <p>Carbs: <%=recipeCarbs[i]%> </p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>             
-                    </div>
-                </div>
-            </body> -->
-
-<div class="col-lg-4 col-sm-6 cuisine-selection" ng-repeat="cuisine in cuisineTypes"> 
+    <div class="col-lg-4 col-sm-6 cuisine-selection" ng-repeat="cuisine in cuisineTypes"> 
                     <a ng-click="getData()" class="portfolio-box">
                     <!-- height="228.03"  -->
                         <img ng-src="img/portfolio/thumbnails/{{cuisine}}.jpg" class="img-fluid" alt="Responsive image" > 
                         <div class="portfolio-box-caption"> 
                             <div class="portfolio-box-caption-content"> 
-                                <div class="project-category text-faded"> 
-                                    Category 
-                                    Mexican 
-                                </div> 
                                 <div class="project-name"> 
-                                    Click here to view {{cuisine}} Recipes 
+                                    {{cuisine}} Recipes 
                                 </div> 
                             </div> 
                         </div>
 
 
-<section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter">
-           <!--  ng-repeat will create as many copies as it needs to of the div that it is defined in.
-            It creates one copy for every recipe in recipes.
-            It also copies thee children tags 
-            Note the double curly braces accessing the scope object that is available to the view.
-            It is getting the titles and the images.
-            ng-src is used to reference the images-->
-                <div ng-if="recipes.length == false && submittedSearch" class="alert alert-danger centre-custom">
-                    No results found, please adjust your search parameters and try again
-                </div>
-                <div class="col-lg-6 col-sm-6 center-block" ng-repeat="recipe in recipes">
-                    <a href="/index/recipe" ng-click="getDetailedData(recipe.id)" class="portfolio-box">
-                    <!-- height="228.03" -->
-                        <img ng-src="{{recipe.image}}" class="img-fluid img-uniform" alt="Responsive image"> 
-                        <div class="recipe-summary">{{recipe.title}}</div>
-                        <!-- <div class="portfolio-box-caption"> -->
-
-                            <!-- <div class="portfolio-box-caption-content"> -->
-                               <!--  <div class="project-category text-faded">
-                                    {{recipe.title}}
-                                </div> -->
-                              <!--   <div class="project-name">
-                                    Click here to view Recipe
-                                </div> -->
-                            <!-- </div> -->
-                        <!-- </div> -->
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
     
 
 
