--- a/public/partial/list.html
+++ b/public/partial/list.html
@@ -1,4 +1,4 @@
-<section>
+<section id="shopping-list" ng-init="scrollTo()">
     <div class="container">
         <div class="row">
             <form name="myform" class="centre-custom">
