--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -90,15 +90,20 @@ under the title of recipeApp -->
                     <h3 class="section-heading text-center red-text"> Cuisine Type </h3>
                     <div class="centre-filters">
                         <a id="none1" ng-click="filters.cuisine=''" class="btn btn-filter">None</a>
-                        <a id="american" ng-click="filters.cuisine='american'" class="btn btn-filter">American</a>
-                        <a id="italian" ng-click="filters.cuisine='italian'" class="btn btn-filter">Italian</a>
-                        <a id="indian" ng-click="filters.cuisine='indian'" class="btn btn-filter">Indian</a>
-                        <a id="irish" ng-click="filters.cuisine='irish'" class="btn btn-filter">Irish</a>
-                        <a id="chinese" ng-click="filters.cuisine='chinese'" class="btn btn-filter">Chinese</a>
-                        <a id="mexican" ng-click="filters.cuisine='mexican'" class="btn btn-filter">Mexican</a> 
+                        <a id="american" ng-click="appendToFilters('cusine','american')" class="btn btn-filter">American</a>
+                        <a id="italian" ng-click="appendToFilters('cusine','italian')" class="btn btn-filter">Italian</a>
+                        <a id="indian" ng-click="appendToFilters('cusine','indian')" class="btn btn-filter">Indian</a>
+                        <a id="irish" ng-click="appendToFilters('cusine','irish')" class="btn btn-filter">Irish</a>
+                        <a id="chinese" ng-click="appendToFilters('cusine','chinese')" class="btn btn-filter">Chinese</a>
+                        <a id="mexican" ng-click="appendToFilters('cusine','mexican')" class="btn btn-filter">Mexican</a> 
 
                     </div>
                 </div>
+                <p class="red-text">filters.Cuisine1 is: {{filters.cuisine[0]}}<p>
+                <p class="red-text">filters.Cuisine2 is: {{filters.cuisine[1]}}<p>
+                <p class="red-text">filters.Diet1 is: {{filters.diet[0]}}<p>
+                <p class="red-text">filters.Diet2 is: {{filters.diet[1]}}<p>
+
 
                 <div >
                     <p></p>
@@ -110,8 +115,6 @@ under the title of recipeApp -->
                     <a id="pescetarian" ng-click="filters.diet='pescetarian'" class="btn btn-filter">Pescetarian</a>
                     <a id="paleo" ng-click="filters.diet='paleo'" class="btn btn-filter">Paleo</a>
                     <a id="primal" ng-click="filters.diet='primal'" class="btn btn-filter">Primal</a>
-                    <a id="ovo vegetarian" ng-click="filters.diet='ovo vegetarian'" class="btn btn-filter">Ovo vegetarian</a>
-                    <a id="lacto vegetarian" ng-click="filters.diet='lacto vegetarian'" class="btn btn-filter">Lacto vegetarian</a>
                     <p></p>
                     </div>
                 </div>
