Made visual changes, interactive contact and fixed href in navbar
- Reinstated the interactive email address in contact section (with
correct font colour)
- Included some instructions
- Fixed search href in navbar
- Removed old unnecessary images

--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -65,9 +65,9 @@ under the title of recipeApp -->
               <div class="panel-body text-primary"></div>
                 <div class="header-content-inner text-primary">
                     <h1 id="homeHeading" class="title-custom">Roasted Pepper</h1>
-                    <hr class="hr-custom">
+                    <hr class="hr-custom"> </hr>
                     <a ng-href="#search" class="btn btn-primary btn-xl page-scroll">Start your recipe search!</a>
-                    <a ng-href="/index/list" id="link-to-list">Build a Shopping List!</a>
+                    <a ng-href="/index/list" class="btn btn-primary btn-xl" id="link-to-list">Build a Shopping List!</a>
 
 <!-- class="btn btn-primary btn-xl page-scroll" -->
 
@@ -88,6 +88,8 @@ under the title of recipeApp -->
                 <div >
                     
                     <h3 class="section-heading text-center red-text"> Cuisine Type </h3>
+                    <p class="text-center red-text">Please select your cuisine type preference </p>
+                    <p class="text-center red-text">(to clear any previous selected cuisine types please click "None")</p>
                     <div class="centre-filters">
                         <a id="none1" ng-click="filters.cuisine=''" class="btn btn-filter">None</a>
                         <a id="american" ng-click="appendToFilters('cusine','american')" class="btn btn-filter">American</a>
@@ -99,15 +101,12 @@ under the title of recipeApp -->
 
                     </div>
                 </div>
-                <p class="red-text">filters.Cuisine1 is: {{filters.cuisine[0]}}<p>
-                <p class="red-text">filters.Cuisine2 is: {{filters.cuisine[1]}}<p>
-                <p class="red-text">filters.Diet1 is: {{filters.diet[0]}}<p>
-                <p class="red-text">filters.Diet2 is: {{filters.diet[1]}}<p>
-
 
                 <div >
                     <p></p>
                     <h3 class="section-heading text-center red-text"> Dietary Needs </h3>
+                    <p class="text-center red-text"> Please select a dietary need</p>
+                    <p class="text-center red-text">(to clear any previous selected dietary needs please click "None")</p>
                     <div class="container centre-filters">
                     <a id="none2" ng-click="filters.diet=''" class="btn btn-filter">None</a>
                     <a id="vegetarian" ng-click="filters.diet='vegetarian'" class="btn btn-filter">Vegetarian</a>
@@ -118,6 +117,15 @@ under the title of recipeApp -->
                     <p></p>
                     </div>
                 </div>
+
+                <!--
+                <p class="red-text">Selected Cuisine: {{filters.cuisine}}<p>
+                <p class="red-text">Selected Dietary Need: {{filters.diet}}<p>
+
+                <p class="red-text">filters.Cuisine1 is: {{filters.cuisine[0]}}<p>
+                <p class="red-text">filters.Cuisine2 is: {{filters.cuisine[1]}}<p>
+                <p class="red-text">filters.Diet1 is: {{filters.diet}}<p>
+                <p class="red-text">filters.Diet2 is: {{filters.diet[1]}}<p> -->
 
                 <fieldset>
                     <input type="text" class="form-control" name="addIngredient" placeholder="Add Ingredients to search by..." ng-model="filters.includeIngredients">
@@ -140,7 +148,7 @@ under the title of recipeApp -->
 
     <div ng-include="'/partial/contact.html'"></div>
 
-        <p class="pull-right">
+    <p class="pull-right">
       <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top"
       role="button" title="Back to Top" data-toggle="tooltip" data-placement="top">
           <span class="arrow-back-to-top glyphicon glyphicon-chevron-up"></span>
